--- a/src/covid19co_resume.ipynb
+++ b/src/covid19co_resume.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,22 +100,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Official Date Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Bogota Date: 2020-05-05\nOfficial Date Report: 2020-05-04\n"
+    }
+   ],
+   "source": [
+    "# URL Bogota Date\n",
+    "URL_BOGOTA_TIME = 'http://worldtimeapi.org/api/timezone/America/Bogota'\n",
+    "# Get Bogota Date\n",
+    "with requests.get(URL_BOGOTA_TIME) as bogota_time:\n",
+    "    bogota_time = bogota_time.json()\n",
+    "# Bogota Date\n",
+    "#print(bogota_time)\n",
+    "bogota_date = datetime.date.fromtimestamp(bogota_time['unixtime']).isoformat()\n",
+    "print('Bogota Date:', bogota_date)\n",
+    "\n",
+    "try:\n",
+    "    # URL Date Report\n",
+    "    URL_DATE_REPORT = 'https://e.infogram.com/api/live/flex/efcb7f88-4bd0-4e26-a497-14ae28f6d199/a90dbc02-108d-44be-8178-b1eb6ea1fdd9?'\n",
+    "    # Get Official Date Report\n",
+    "    with requests.get(URL_DATE_REPORT) as official_date_report:\n",
+    "        official_date_report = official_date_report.json()\n",
+    "    # Official Date Report\n",
+    "    #print(official_date_report['data'][0][1][0])\n",
+    "    official_date_report = official_date_report['data'][0][1][0]\n",
+    "    #print(official_date_report)\n",
+    "    # Date Format\n",
+    "    date_format = official_date_report.split(' ')[4].split('-')\n",
+    "    # YEAR-MONTH-DAY\n",
+    "    official_date_report = datetime.date(int(date_format[2]), int(date_format[1]), int(date_format[0]))\n",
+    "except:\n",
+    "    official_date_report = bogota_date\n",
+    "# Print\n",
+    "print('Official Date Report:', official_date_report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "          date  total_reported  accum_reported  total_recupered  \\\n61  01/05/2020             500            6966                0   \n62  02/05/2020             279            7245                0   \n63  03/05/2020             423            7668                0   \n64  04/05/2020             305            7973                0   \n65  05/05/2020               0            7973                0   \n\n    accum_recupered  total_deceased  accum_deceased  \n61             1807              10             336  \n62             1807              10             346  \n63             1807               8             354  \n64             1807               4             358  \n65             1807               0             358  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>total_reported</th>\n      <th>accum_reported</th>\n      <th>total_recupered</th>\n      <th>accum_recupered</th>\n      <th>total_deceased</th>\n      <th>accum_deceased</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>61</th>\n      <td>01/05/2020</td>\n      <td>500</td>\n      <td>6966</td>\n      <td>0</td>\n      <td>1807</td>\n      <td>10</td>\n      <td>336</td>\n    </tr>\n    <tr>\n      <th>62</th>\n      <td>02/05/2020</td>\n      <td>279</td>\n      <td>7245</td>\n      <td>0</td>\n      <td>1807</td>\n      <td>10</td>\n      <td>346</td>\n    </tr>\n    <tr>\n      <th>63</th>\n      <td>03/05/2020</td>\n      <td>423</td>\n      <td>7668</td>\n      <td>0</td>\n      <td>1807</td>\n      <td>8</td>\n      <td>354</td>\n    </tr>\n    <tr>\n      <th>64</th>\n      <td>04/05/2020</td>\n      <td>305</td>\n      <td>7973</td>\n      <td>0</td>\n      <td>1807</td>\n      <td>4</td>\n      <td>358</td>\n    </tr>\n    <tr>\n      <th>65</th>\n      <td>05/05/2020</td>\n      <td>0</td>\n      <td>7973</td>\n      <td>0</td>\n      <td>1807</td>\n      <td>0</td>\n      <td>358</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "          date  total_reported  accum_reported  total_recupered  \\\n60  30/04/2020             296            6466                0   \n61  01/05/2020             500            6966                0   \n62  02/05/2020             279            7245                0   \n63  03/05/2020             423            7668                0   \n64  04/05/2020             305            7973                0   \n\n    accum_recupered  total_deceased  accum_deceased  \n60             1807              15             326  \n61             1807              10             336  \n62             1807              10             346  \n63             1807               8             354  \n64             1807               4             358  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>total_reported</th>\n      <th>accum_reported</th>\n      <th>total_recupered</th>\n      <th>accum_recupered</th>\n      <th>total_deceased</th>\n      <th>accum_deceased</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>60</th>\n      <td>30/04/2020</td>\n      <td>296</td>\n      <td>6466</td>\n      <td>0</td>\n      <td>1807</td>\n      <td>15</td>\n      <td>326</td>\n    </tr>\n    <tr>\n      <th>61</th>\n      <td>01/05/2020</td>\n      <td>500</td>\n      <td>6966</td>\n      <td>0</td>\n      <td>1807</td>\n      <td>10</td>\n      <td>336</td>\n    </tr>\n    <tr>\n      <th>62</th>\n      <td>02/05/2020</td>\n      <td>279</td>\n      <td>7245</td>\n      <td>0</td>\n      <td>1807</td>\n      <td>10</td>\n      <td>346</td>\n    </tr>\n    <tr>\n      <th>63</th>\n      <td>03/05/2020</td>\n      <td>423</td>\n      <td>7668</td>\n      <td>0</td>\n      <td>1807</td>\n      <td>8</td>\n      <td>354</td>\n    </tr>\n    <tr>\n      <th>64</th>\n      <td>04/05/2020</td>\n      <td>305</td>\n      <td>7973</td>\n      <td>0</td>\n      <td>1807</td>\n      <td>4</td>\n      <td>358</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 60
     }
    ],
    "source": [
@@ -127,17 +183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "          date   accum\n61  01/05/2020  108950\n62  02/05/2020  114602\n63  03/05/2020  118801\n64  04/05/2020  123029\n65  05/05/2020       0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>accum</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>61</th>\n      <td>01/05/2020</td>\n      <td>108950</td>\n    </tr>\n    <tr>\n      <th>62</th>\n      <td>02/05/2020</td>\n      <td>114602</td>\n    </tr>\n    <tr>\n      <th>63</th>\n      <td>03/05/2020</td>\n      <td>118801</td>\n    </tr>\n    <tr>\n      <th>64</th>\n      <td>04/05/2020</td>\n      <td>123029</td>\n    </tr>\n    <tr>\n      <th>65</th>\n      <td>05/05/2020</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "          date   accum\n60  30/04/2020  104657\n61  01/05/2020  108950\n62  02/05/2020  114602\n63  03/05/2020  118801\n64  04/05/2020  123029",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>accum</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>60</th>\n      <td>30/04/2020</td>\n      <td>104657</td>\n    </tr>\n    <tr>\n      <th>61</th>\n      <td>01/05/2020</td>\n      <td>108950</td>\n    </tr>\n    <tr>\n      <th>62</th>\n      <td>02/05/2020</td>\n      <td>114602</td>\n    </tr>\n    <tr>\n      <th>63</th>\n      <td>03/05/2020</td>\n      <td>118801</td>\n    </tr>\n    <tr>\n      <th>64</th>\n      <td>04/05/2020</td>\n      <td>123029</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 61
     }
    ],
    "source": [
@@ -163,17 +219,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Empty DataFrame\nColumns: [date, total_reported, accum_reported, total_recovered, accum_recovered, total_deceased, accum_deceased, accum_samples]\nIndex: []",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>total_reported</th>\n      <th>accum_reported</th>\n      <th>total_recovered</th>\n      <th>accum_recovered</th>\n      <th>total_deceased</th>\n      <th>accum_deceased</th>\n      <th>accum_samples</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "         date total_reported accum_reported total_recovered accum_recovered  \\\n0  04/05/2020            305           7973               0            1807   \n\n  total_deceased accum_deceased accum_samples  \n0              4            358        123029  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>total_reported</th>\n      <th>accum_reported</th>\n      <th>total_recovered</th>\n      <th>accum_recovered</th>\n      <th>total_deceased</th>\n      <th>accum_deceased</th>\n      <th>accum_samples</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>04/05/2020</td>\n      <td>305</td>\n      <td>7973</td>\n      <td>0</td>\n      <td>1807</td>\n      <td>4</td>\n      <td>358</td>\n      <td>123029</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 62
     }
    ],
    "source": [
@@ -184,9 +240,26 @@
     "# Total Deceased\n",
     "# Accumulated Deceased\n",
     "# Accumulated Samples\n",
-    "covid19co_resume = pd.DataFrame(columns=['date', 'total_reported', 'accum_reported', 'total_recovered', 'accum_recovered', 'total_deceased', 'accum_deceased', 'accum_samples'])\n",
+    "\n",
+    "# Data\n",
+    "data_resume = [official_date_report.strftime('%d/%m/%Y')] + covid19co_timeline.iloc[-1].values.tolist()[1:] + covid19co_samples_timeline.iloc[-1].values.tolist()[1:]\n",
+    "#print(data_resume)\n",
+    "\n",
+    "# Dataframe Resume\n",
+    "covid19co_resume = pd.DataFrame(columns=['date', 'total_reported', 'accum_reported', 'total_recovered', 'accum_recovered', 'total_deceased', 'accum_deceased', 'accum_samples'], data=np.array([data_resume]))\n",
+    "\n",
     "# Show dataframe\n",
     "covid19co_resume.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save dataframe\n",
+    "covid19co_resume.to_csv(os.path.join(OUTPUT_DIR, 'covid19co_resume.csv'), index=False)"
    ]
   },
   {
